alb.tf
# ALB Resource

resource "aws_lb" "web_alb" {
    name               = "3tier-web-alb"
    internal           = false
    load_balancer_type = "application"
    security_groups    = [aws_security_group.alb_sg.id]
    subnets            = [aws_subnet.public_subnet_1.id, aws_subnet.public_subnet_2.id]

    tags = {
        Name = "3tier-web-alb"
    }
}

# ALB Target Group

resource "aws_lb_target_group" "web_tg" {
    name     = "3tier-web-tg"
    port     = 80
    protocol = "HTTP"
    vpc_id   = aws_vpc.main.id

    health_check {
        path                = "/"
        protocol            = "HTTP"
        matcher             = "200"
        interval            = 30
        timeout             = 5
        healthy_threshold   = 5
        unhealthy_threshold = 2
    }

    tags = {
        Name = "3tier-web-tg"
    }
}

# ALB Listener

resource "aws_lb_listener" "http_listener" {
    load_balancer_arn = aws_lb.web_alb.arn
    port              = "80"
    protocol          = "HTTP"

    default_action {
        type             = "forward"
        target_group_arn = aws_lb_target_group.web_tg.arn
    }
  
}
